KNL-61
Patch from Greg Thomas
View Site as if in a Different Role. SAK-7924.

Thanks


git-svn-id: https://source.sakaiproject.org/svn/kernel/trunk@52923 66ffb92e-73f9-0310-93c1-f5514f145a0a